# C-Libreria-estandar

./: CMakeLists.txt  README.md  main.c
Ejercicio1/: main.c
Ejercicio2/: main.c
Ejercicio3/: main.c
