cmake_minimum_required(VERSION 3.29)
project(C_Libreria_estandar C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Libreria_estandar
        Ejercicio0/main.c)
add_executable(Ejercicio1
        Ejercicio1/main.c)

add_executable(Ejercicio2
        Ejercicio2/main.c)
add_executable(Ejercicio3 Ejercicio3/main.c)
